testdata/baselines/reference/submodule/conformance/importTag16.errors.txt
b.js(5,12): error TS4078: Parameter 'b' of exported function has or is using private name 'I'.


==== a.ts (0 errors) ====
    export default interface Foo {}
    export interface I {}
    
==== b.js (1 errors) ====
    /** @import Foo, { I } from "./a" */
    
    /**
     * @param {Foo} a
     * @param {I} b
               ~
!!! error TS4078: Parameter 'b' of exported function has or is using private name 'I'.
     */
    export function foo(a, b) {}
    